Split runtime implementations into loosely coupled Swim kernel modules